--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
     </dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
 
 	<build>
 		<plugins>
