timestamps for logger, amqp configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-command = "mks"
-amqp.host = "localhost"
-amqp.user = "guest"
-amqp.password = "guest"
+name = "default"
+amqp.host = localhost
+amqp.user = guest
+amqp.password = guest
